Java8 compat fix